--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <title>Slide viewer</title>
 
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/ie10-viewport-bug-workaround.css">
     <link rel="stylesheet" href="css/main.css">
 
