--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script src="scripts/script.min.js"></script>
     <script src="course/course.js"></script>
   </head>
   <body>
